--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
   "name": "captialone_project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "ts-node src/app.ts",
+      "start:dev": "nodemon src/app.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/express": "^4.17.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.1.0",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "typeorm": "^0.3.20"
   }
 }
